@@ -1,0 +1,2 @@
+{% load i18n %}
+{% blocktrans %}Removed e-mail address {{email}}.{% endblocktrans %}
