@@ -1,0 +1,3 @@
+{% load i18n %}
+{% blocktrans %}Password successfully changed.{% endblocktrans %}
+
