@@ -1,0 +1,2 @@
+{% load i18n %}
+{% blocktrans %}Primary e-mail address set.{% endblocktrans %}
